[gd_scene load_steps=65 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Sprites/luna2.png" type="Texture" id=2]
[ext_resource path="res://Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Luna.png" type="Texture" id=4]
[ext_resource path="res://Sprites/BeatOrange.png" type="Texture" id=5]
[ext_resource path="res://combo_save.wav" type="AudioStream" id=6]
[ext_resource path="res://Sprites/Sustain1.png" type="Texture" id=7]
[ext_resource path="res://EditorHelp.gd" type="Script" id=8]
[ext_resource path="res://RobotoMono-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://GameModes/Editor.gd" type="Script" id=11]
[ext_resource path="res://GameModes/Game.gd" type="Script" id=12]
[ext_resource path="res://GameModes/EditorModes/SelectMode.gd" type="Script" id=13]
[ext_resource path="res://GameModes/EditorModes/InsertMode.gd" type="Script" id=14]
[ext_resource path="res://GameModes/EditorModes/PasteMode.gd" type="Script" id=15]
[ext_resource path="res://SceneTransition.tscn" type="PackedScene" id=16]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Gradient" id=47]
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=48]
gradient = SubResource( 47 )
fill_to = Vector2( 0, 1 )

[sub_resource type="StyleBoxTexture" id=49]
texture = SubResource( 48 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="Animation" id=50]
resource_name = "Flash"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("Flash:self_modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.5 )
}

[sub_resource type="Animation" id=51]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.635294, 0.101961, 0.266667, 1 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Flash:self_modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.635294, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Flash:self_modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.101961, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Flash:self_modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.266667, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Flash:self_modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="StyleBoxFlat" id=46]
bg_color = Color( 0.156863, 0.0627451, 0.0392157, 0 )
border_width_left = 5
border_width_right = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="Gradient" id=39]
interpolation_mode = 2
offsets = PoolRealArray( 0.379888, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 0, 0.223529, 0.490196 )

[sub_resource type="GradientTexture2D" id=40]
gradient = SubResource( 39 )
fill_to = Vector2( 0, 1 )

[sub_resource type="StyleBoxTexture" id=41]
texture = SubResource( 40 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Gradient" id=42]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=43]
gradient = SubResource( 42 )

[sub_resource type="ParticlesMaterial" id=44]
emission_shape = 2
emission_box_extents = Vector3( 160, 0, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
flatness = 0.51
gravity = Vector3( 0, 98, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 0.88
color_ramp = SubResource( 43 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=7]
resource_name = "Flash"
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreHUD/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=29]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 29 )

[sub_resource type="DynamicFont" id=45]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.407843, 0.588235, 1, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.188235, 0.262745, 0.427451, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_size = 2

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 129, 0, 129, 173 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 258, 0, 129, 173 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 129, 0, 129, 173 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 516, 0, 129, 173 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 645, 0, 129, 173 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 774, 0, 129, 173 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 645, 0, 129, 173 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 903, 0, 129, 173 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 1032, 0, 129, 173 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 344, 0, 86, 173 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 86, 173 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 86, 0, 86, 173 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 172, 0, 86, 173 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 258, 0, 86, 173 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 129, 173 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 387, 0, 129, 173 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "combo_10",
"speed": 2.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "combo_2",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "combo_30",
"speed": 2.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "combo_50",
"speed": 1.0
}, {
"frames": [ SubResource( 30 ) ],
"loop": true,
"name": "combo_anger",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "combo_fear",
"speed": 4.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "combo_relief",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "miss",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=53]
bg_color = Color( 0, 0, 0, 0.603922 )

[sub_resource type="StyleBoxFlat" id=54]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.262745, 0.262745, 0.262745, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=55]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=56]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=57]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=52]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0, 0, 0, 0.396078 )

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 1, 0.447059, 0, 0.682353 )

[sub_resource type="DynamicFont" id=37]
size = 29
font_data = ExtResource( 3 )

[node name="Game" type="Control" groups=["GameNode"]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SceneExit" parent="." instance=ExtResource( 16 )]

[node name="Game" type="Node" parent="."]
script = ExtResource( 12 )

[node name="Timer" type="Timer" parent="."]
pause_mode = 1
wait_time = 3.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 1

[node name="ComboCoinGet" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 6 )

[node name="Background" type="Panel" parent="."]
pause_mode = 1
self_modulate = Color( 0.290196, 0.12549, 0.145098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 10 )

[node name="Flash" type="Panel" parent="Background"]
pause_mode = 1
self_modulate = Color( 0.635294, 0.101961, 0.266667, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 49 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
playback_default_blend_time = 1.0
anims/Flash = SubResource( 50 )
anims/RESET = SubResource( 51 )

[node name="Panel3" type="Panel" parent="."]
pause_mode = 1
self_modulate = Color( 0.156863, 0.0627451, 0.0392157, 1 )
anchor_left = 0.334
anchor_right = 0.667
anchor_bottom = 1.0
margin_top = -70.0
margin_right = -0.00805664
margin_bottom = 34.0
custom_styles/panel = SubResource( 10 )

[node name="Lines" type="Panel" parent="Panel3"]
pause_mode = 1
self_modulate = Color( 0.85098, 0.105882, 0.305882, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 46 )

[node name="LightUpA" type="Panel" parent="."]
pause_mode = 1
anchor_left = 0.363
anchor_right = 0.441
anchor_bottom = 0.857
margin_left = 0.287994
margin_right = 0.415985
margin_bottom = -0.200012
custom_styles/panel = SubResource( 41 )

[node name="LightUpB" type="Panel" parent="."]
pause_mode = 1
anchor_left = 0.461
anchor_right = 0.539
anchor_bottom = 0.857
margin_left = -0.0640259
margin_right = 0.0639648
margin_bottom = -0.200012
custom_styles/panel = SubResource( 41 )

[node name="LightUpC" type="Panel" parent="."]
pause_mode = 1
anchor_left = 0.559
anchor_right = 0.637
anchor_bottom = 0.857
margin_left = -0.416016
margin_right = -0.288025
margin_bottom = -0.200012
custom_styles/panel = SubResource( 41 )

[node name="Panel2" type="Panel" parent="."]
pause_mode = 1
modulate = Color( 1, 0.576471, 0.25098, 1 )
anchor_top = 0.858
anchor_right = 1.008
anchor_bottom = 0.858
margin_top = -1.80005
margin_right = -0.192017
margin_bottom = 0.199951
rect_pivot_offset = Vector2( 169, -102 )
custom_styles/panel = SubResource( 4 )

[node name="Node2D" type="Particles2D" parent="Panel2"]
position = Vector2( 411, 0 )
scale = Vector2( 0.2, 0.2 )
emitting = false
amount = 32
lifetime = 3.0
speed_scale = 5.0
process_material = SubResource( 44 )
texture = ExtResource( 5 )

[node name="Node2D2" type="Particles2D" parent="Panel2"]
position = Vector2( 511, 0 )
scale = Vector2( 0.2, 0.2 )
emitting = false
amount = 32
lifetime = 3.0
speed_scale = 5.0
process_material = SubResource( 44 )
texture = ExtResource( 5 )

[node name="Node2D3" type="Particles2D" parent="Panel2"]
position = Vector2( 611, 0 )
scale = Vector2( 0.2, 0.2 )
emitting = false
amount = 32
lifetime = 3.0
speed_scale = 5.0
process_material = SubResource( 44 )
texture = ExtResource( 5 )

[node name="ComboNote" type="Panel" parent="."]
pause_mode = 1
modulate = Color( 1, 1, 1, 0.384314 )
self_modulate = Color( 1, 0.701961, 0, 1 )
anchor_left = -0.014
anchor_right = 1.009
anchor_bottom = 0.067
margin_left = 0.336
margin_right = -0.216064
margin_bottom = -0.200001
custom_styles/panel = SubResource( 11 )

[node name="Notes" type="Node2D" parent="."]
pause_mode = 1
process_priority = 1

[node name="ScoreHUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LabelAnim" type="AnimationPlayer" parent="ScoreHUD"]
pause_mode = 1
root_node = NodePath("../..")
anims/Flash = SubResource( 7 )

[node name="Label" type="Label" parent="ScoreHUD"]
pause_mode = 1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -188.0
margin_top = -65.0
margin_right = 188.0
margin_bottom = -27.0
rect_pivot_offset = Vector2( 188, 19 )
theme = SubResource( 6 )
align = 1
valign = 1

[node name="Score" type="Label" parent="ScoreHUD"]
pause_mode = 1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -158.0
margin_top = -23.0
margin_right = 158.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 68, 19 )
theme = SubResource( 6 )
custom_fonts/font = SubResource( 45 )
text = "123123"
align = 1
valign = 1

[node name="Combo" type="Label" parent="ScoreHUD"]
pause_mode = 1
anchor_left = 1.0
anchor_right = 1.0
margin_left = -218.0
margin_top = 17.0
margin_right = -64.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 77, 55 )
theme = SubResource( 6 )
text = "x0"
align = 1
valign = 1

[node name="ThisCombo" type="Label" parent="ScoreHUD/Combo"]
margin_left = -11.0
margin_top = 45.0
margin_right = 337.0
margin_bottom = 83.0
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 6 )
text = "this combo is..."
align = 1
valign = 1

[node name="Descriptor" type="Label" parent="ScoreHUD/Combo"]
margin_left = -28.0
margin_top = 73.0
margin_right = 232.0
margin_bottom = 111.0
rect_scale = Vector2( 0.8, 0.8 )
theme = SubResource( 6 )
text = "non-existant..."
align = 1
valign = 1
autowrap = true

[node name="ProgressBar" type="ProgressBar" parent="ScoreHUD/Combo"]
margin_left = -31.0
margin_top = 146.0
margin_right = 187.0
margin_bottom = 160.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 2.0
value = 1.0
percent_visible = false

[node name="Luna_react" type="AnimatedSprite" parent="ScoreHUD"]
pause_mode = 1
position = Vector2( 99, 601 )
scale = Vector2( 2, 2 )
frames = SubResource( 17 )
offset = Vector2( 0, -75 )

[node name="Editor" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="InsertMode" type="Node" parent="Editor"]
script = ExtResource( 14 )

[node name="SelectMode" type="Node" parent="Editor"]
script = ExtResource( 13 )

[node name="PasteMode" type="Node" parent="Editor"]
script = ExtResource( 15 )

[node name="Beats" type="Control" parent="Editor"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_right = 200.0

[node name="PastePreview" type="Control" parent="Editor"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -165.0
margin_right = 165.0

[node name="Selections" type="Control" parent="Editor"]
modulate = Color( 1, 1, 1, 0.498039 )
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.0
margin_right = 153.0

[node name="History" type="VBoxContainer" parent="Editor"]
margin_right = 349.0
margin_bottom = 182.0

[node name="Sustains" type="Control" parent="Editor"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Note1" type="TextureRect" parent="Editor/Sustains"]
margin_left = 379.0
margin_top = 481.0
margin_right = 443.0
margin_bottom = 545.0
texture = ExtResource( 5 )

[node name="Sustain" type="TextureRect" parent="Editor/Sustains/Note1"]
margin_top = 32.0
margin_right = 64.0
margin_bottom = 96.0
rect_scale = Vector2( 1, 1e-05 )
texture = ExtResource( 7 )

[node name="End" type="TextureRect" parent="Editor/Sustains/Note1"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 5 )

[node name="Note2" type="TextureRect" parent="Editor/Sustains"]
margin_left = 480.0
margin_top = 481.0
margin_right = 544.0
margin_bottom = 545.0
texture = ExtResource( 5 )

[node name="Sustain" type="TextureRect" parent="Editor/Sustains/Note2"]
margin_top = 32.0
margin_right = 64.0
margin_bottom = 96.0
rect_scale = Vector2( 1, 1e-05 )
texture = ExtResource( 7 )

[node name="End" type="TextureRect" parent="Editor/Sustains/Note2"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 5 )

[node name="Note3" type="TextureRect" parent="Editor/Sustains"]
margin_left = 578.0
margin_top = 481.0
margin_right = 642.0
margin_bottom = 545.0
texture = ExtResource( 5 )

[node name="Sustain" type="TextureRect" parent="Editor/Sustains/Note3"]
margin_top = 32.0
margin_right = 64.0
margin_bottom = 96.0
rect_scale = Vector2( 1, 1e-05 )
texture = ExtResource( 7 )

[node name="End" type="TextureRect" parent="Editor/Sustains/Note3"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 5 )

[node name="Help" type="Panel" parent="Editor"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 53 )
script = ExtResource( 8 )

[node name="HelpWindow" type="PanelContainer" parent="Editor/Help"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -493.0
margin_top = -278.0
margin_right = 493.0
margin_bottom = 254.0
custom_styles/panel = SubResource( 54 )

[node name="HSplitContainer" type="HSplitContainer" parent="Editor/Help/HelpWindow"]
margin_left = 2.0
margin_top = 2.0
margin_right = 984.0
margin_bottom = 530.0
split_offset = 150

[node name="Contents" type="Tree" parent="Editor/Help/HelpWindow/HSplitContainer"]
margin_right = 151.0
margin_bottom = 528.0
hide_root = true

[node name="Help" type="RichTextLabel" parent="Editor/Help/HelpWindow/HSplitContainer"]
margin_left = 163.0
margin_right = 982.0
margin_bottom = 528.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/mono_font = SubResource( 55 )
custom_fonts/bold_font = SubResource( 56 )
custom_fonts/normal_font = SubResource( 57 )
bbcode_enabled = true

[node name="Command" type="LineEdit" parent="Editor"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -31.0
placeholder_text = "type :help here for help"
caret_blink = true

[node name="QuickCommand" type="Label" parent="Editor"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -166.0
margin_top = -24.0
custom_fonts/font = SubResource( 52 )

[node name="CursorX" type="TextureRect" parent="Editor"]
modulate = Color( 0, 1, 0.670588, 1 )
margin_left = 578.0
margin_top = 481.0
margin_right = 642.0
margin_bottom = 545.0
texture = ExtResource( 5 )

[node name="Ranking" type="Panel" parent="."]
pause_mode = 1
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="ComboWas" type="Label" parent="Ranking"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 229.0
margin_top = 434.0
margin_right = -201.0
margin_bottom = -128.0
rect_pivot_offset = Vector2( 68, 19 )
theme = SubResource( 6 )
text = "Your Highest Combo Was:"
align = 1
valign = 1

[node name="SongName" type="Label" parent="Ranking"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.168
anchor_right = 1.0
anchor_bottom = 0.168
margin_left = 87.0
margin_top = -18.8
margin_right = -51.0
margin_bottom = 19.2
rect_pivot_offset = Vector2( 68, 19 )
theme = SubResource( 6 )
text = "SongNmae"
align = 1
valign = 1

[node name="Score" type="Label" parent="Ranking"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.697
anchor_right = 1.0
anchor_bottom = 0.697
margin_left = 233.0
margin_top = -19.2
margin_right = -197.0
margin_bottom = 18.8
rect_pivot_offset = Vector2( 68, 19 )
theme = SubResource( 6 )
text = "Score: 00000000"
align = 1
valign = 1

[node name="ComboTitle" type="Label" parent="Ranking"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.838
anchor_right = 1.0
anchor_bottom = 0.838
margin_left = 233.0
margin_top = -18.8
margin_right = -197.0
margin_bottom = 19.2
rect_pivot_offset = Vector2( 68, 19 )
theme = SubResource( 6 )
text = "UNLADYLIKE"
align = 1
valign = 1

[node name="Combo" type="Label" parent="Ranking"]
modulate = Color( 0.2, 0.2, 0.2, 1 )
anchor_top = 0.88
anchor_right = 1.0
anchor_bottom = 0.88
margin_left = 278.0
margin_top = -19.0001
margin_right = -152.0
margin_bottom = 18.9999
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 68, 19 )
theme = SubResource( 6 )
text = "x50"
align = 1
valign = 1

[node name="ComboRank" type="Label" parent="Ranking"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 412.0
margin_top = -35.0
margin_right = -151.0
margin_bottom = 62.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 360, 48 )
theme = SubResource( 6 )
text = "wHAT THE [F]UCK"
align = 1
valign = 1

[node name="Return" type="Label" parent="Ranking"]
modulate = Color( 0.2, 0.2, 0.2, 1 )
anchor_top = 0.993
anchor_right = 0.007
anchor_bottom = 0.993
margin_left = -5.99997
margin_top = -66.8
margin_right = 580.832
margin_bottom = 12.2
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 68, 19 )
theme = SubResource( 6 )
text = "Press D to return to song select
Press A to restart"

[node name="Pause" type="Panel" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 35 )

[node name="Bar" type="Panel" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 261.0
margin_bottom = -261.0
custom_styles/panel = SubResource( 36 )

[node name="PauseLabel" type="Label" parent="Pause/Bar"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_right = -816.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 37 )
text = "ZA WARUDO"
align = 1
valign = 1

[node name="Options" type="Label" parent="Pause/Bar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.5
margin_top = -39.0
margin_right = 236.5
margin_bottom = 39.0
custom_fonts/font = SubResource( 37 )
text = "[A] Reset      [S] Options      [D] Leave"
align = 1
valign = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_song_finished"]
[connection signal="item_selected" from="Editor/Help/HelpWindow/HSplitContainer/Contents" to="Editor/Help" method="_on_contents_item_selected"]
[connection signal="focus_entered" from="Editor/Command" to="Editor" method="_on_command_focus_entered"]
[connection signal="focus_exited" from="Editor/Command" to="Editor" method="_on_command_focus_exited"]
